--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,10 @@ body {
     pointer-events: all;
 }
 
+.chart__tooltip--close {
+    outline: none;
+}
+
 .chart__tooltip--close img {
     max-width: 100%;
     height: auto;
